컬럼추가 회원가입, 로그인
멤버 컬럼 추가

--- a/QuizLMS/src/main/resources/templates/fragments/footer.html
+++ b/QuizLMS/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,5 @@
 <!-- src/main/resources/templates/fragments/footer.html -->
-<footer class="footer mt-auto py-3 bg-light" th:fragment="footer">
+<footer class="footer mt-auto py-3 bg-light container" th:fragment="footer">
   <div class="container">
     <span class="text-muted">© 2024 QuizRunner. All rights reserved.</span>
   </div>
