--- a/QuizLMS/src/main/resources/templates/fragments/navbar.html
+++ b/QuizLMS/src/main/resources/templates/fragments/navbar.html
@@ -1,13 +1,17 @@
 <!-- src/main/resources/templates/fragments/navbar.html -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
+<nav class="navbar navbar-expand-lg navbar-light bg-light container" th:fragment="navbar">
   <a class="navbar-brand" href="/">QuizRunner</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <ul class="navbar-nav ml-auto">
+
     <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
-      <a class="nav-link" th:href="@{/}">Logout</a>
+      <form action="/logout" method="post">
+        <button type="submit" class="nav-link btn btn-link">Logout</button>
+      </form>
     </li>
+
     <li class="nav-item" th:if="${#authorization.expression('!isAuthenticated()')}">
       <a class="nav-link" th:href="@{/login}">Login</a>
     </li>
