--- a/QuizLMS/src/main/resources/templates/quiz_regist.html
+++ b/QuizLMS/src/main/resources/templates/quiz_regist.html
@@ -10,9 +10,9 @@
     <form th:action="@{/quiz/create}" th:object="${quizForm}" method="post">
         <div class="form-group">
             <label for="name">카테고리 이름</label>
-            <input type="text" id="category.name" th:field="*{category.name}" class="form-control" required>
-            <div th:if="${#fields.hasErrors('category.name')}" class="text-danger">
-                <span th:errors="*{category.name}">이름 오류</span>
+            <input type="text" id="categoryName" th:field="*{categoryName}" class="form-control" required>
+            <div th:if="${#fields.hasErrors('categoryName')}" class="text-danger">
+                <span th:errors="*{categoryName}">이름 오류</span>
             </div>
             <label for="name">제목</label>
             <input type="text" id="title" th:field="*{title}" class="form-control" required>
