--- a/quiz-view/src/Css/Quiz.css
+++ b/quiz-view/src/Css/Quiz.css
@@ -1,6 +1,7 @@
 .container {
-    min-height: calc(100vh - 102px);
+    min-height: calc(100vh - 182px);
     margin: 0 auto;
+    /* padding: 40px 20px; */
 }
 .wrapper {
     padding: 0 20px;
@@ -86,4 +87,82 @@ background-color: #ffcc00;
 
 .quiz-option:hover {
 background-color: #d6d6d6;
+}
+
+.status-bar {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 20px;
+    font-size: 16px;
+}
+
+.timer-bar {
+width: 100%;
+height: 10px;
+background-color: #e0e0e0;
+border-radius: 5px;
+overflow: hidden;
+margin-bottom: 20px;
+}
+
+.timer {
+height: 100%;
+background-color: #4caf50;
+}
+
+/* quiz selection */
+.quiz-selection {
+    text-align: center;
+    background-color: #e0f7fa;
+    padding: 20px;
+    min-height: calc(100vh - 142px);
+}
+
+.quiz-selection h1 {
+font-size: 24px;
+margin-bottom: 10px;
+}
+
+.quiz-selection p {
+font-size: 16px;
+margin-bottom: 20px;
+}
+
+.quiz-category {
+display: flex;
+flex-direction: column;
+gap: 15px;
+align-items: center;
+}
+
+.category-item {
+display: flex;
+align-items: center;
+justify-content: center;
+width: 300px;
+padding: 20px;
+border-radius: 10px;
+font-size: 18px;
+color: white;
+text-decoration: none;
+transition: transform 0.3s;
+}
+
+.category-item:hover {
+transform: scale(1.05);
+}
+
+.category-item.blue {
+background-color: #4fc3f7;
+}
+
+.category-item.yellow {
+background-color: #ffeb3b;
+color: black;
+}
+
+.icon {
+font-size: 24px;
+margin-right: 10px;
 }
