--- a/QuizLMS/src/main/resources/templates/quiz-page.html
+++ b/QuizLMS/src/main/resources/templates/quiz-page.html
@@ -7,12 +7,14 @@
 <h1 th:text="${categoryName} + ' Quiz'"></h1>
 <form th:action="@{/quiz/submit}" method="post">
     <input type="hidden" name="categoryName" th:value="${categoryName}" />
-    <input type="hidden" name="userId" value="1" /> <!-- Assume user ID 1 for now -->
     <div th:each="quiz, stat : ${quizzes}">
-        <h3 th:text="${quiz.question}"></h3>
-        <div th:each="option : ${quiz.options}">
-            <input type="radio" th:name="'answer' + ${stat.index}" th:value="${option}" />
-            <label th:text="${option}"></label>
+        <div>
+            <h3 th:text="${quiz.quiz.title}"></h3>
+            <input type="hidden" th:name="'quizId_' + ${stat.index}" th:value="${quiz.quiz.id}" /> <!-- 퀴즈 ID 추가 -->
+            <div th:each="option : ${quiz.quiz.options}">
+                <input type="radio" th:name="'answer_' + ${stat.index}" th:value="${option}" />
+                <label th:text="${option}"></label>
+            </div>
         </div>
     </div>
     <button type="submit">Submit Quiz</button>
