카테고리 리액트 연결

--- a/QuizLMS/src/main/resources/templates/register.html
+++ b/QuizLMS/src/main/resources/templates/register.html
@@ -90,39 +90,6 @@
         });
       });
 
-      $('#email').on('blur', function() {
-        var email = $(this).val();
-        checkDuplicate('/check-email', email, function(available) {
-          if (!available) {
-            $('#email').siblings('.error').text('Email is already registered.');
-          } else {
-            $('#email').siblings('.error').text('');
-          }
-        });
-      });
-
-      $('#nickname').on('blur', function() {
-        var nickname = $(this).val();
-        checkDuplicate('/check-nickname', nickname, function(available) {
-          if (!available) {
-            $('#nickname').siblings('.error').text('Nickname is already taken.');
-          } else {
-            $('#nickname').siblings('.error').text('');
-          }
-        });
-      });
-
-      $('#phoneNumber').on('blur', function() {
-        var phoneNumber = $(this).val();
-        checkDuplicate('/check-phone-number', phoneNumber, function(available) {
-          if (!available) {
-            $('#phoneNumber').siblings('.error').text('Phone number is already in use.');
-          } else {
-            $('#phoneNumber').siblings('.error').text('');
-          }
-        });
-      });
-
       // 폼 제출 전 유효성 검사
       $('form').on('submit', function(e) {
         var valid = true;
@@ -171,7 +138,7 @@
       <input type="text" id="name" name="name" th:field="*{name}" class="form-control" required>
       <div class="error"></div>
     </div>
-    <div class="form-group">
+    <!--<div class="form-group">
       <label for="phoneNumber">Phone Number</label>
       <input type="text" id="phoneNumber" name="phoneNumber" th:field="*{phoneNumber}" class="form-control" required>
       <div class="error"></div>
@@ -185,7 +152,7 @@
       <label for="nickname">Nickname</label>
       <input type="text" id="nickname" name="nickname" th:field="*{nickname}" class="form-control" required>
       <div class="error"></div>
-    </div>
+    </div>-->
     <button type="submit" class="btn-primary">Register</button>
   </form>
   <a href="#" th:href="@{/login}">Already have an account? Login here.</a>
