--- a/QuizLMS/src/main/resources/templates/quiz_solution.html
+++ b/QuizLMS/src/main/resources/templates/quiz_solution.html
@@ -4,7 +4,7 @@
     <title th:text="${quiz.category.name} + ' Quiz'"></title>
 </head>
 <body>
-<h1 th:text="${quiz.category.name}  + ' Quiz'"></h1>
+<h1 th:text="${quiz.category.name} + ' Quiz'"></h1>
 <form th:action="@{/quiz/submit}" method="post">
     <input type="hidden" name="categoryName" th:value="${quiz.category.name}" />
     <div th:each="quiz, stat : ${quiz}">
@@ -12,12 +12,14 @@
             <h3 th:text="${quiz.title}"></h3>
             <input type="hidden" th:name="'quizId_' + ${stat.index}" th:value="${quiz.id}" /> <!-- 퀴즈 ID 추가 -->
             <div th:each="option : ${quiz.options}">
-                <input type="radio" th:name="'answer_' + ${stat.index}" th:value="${option}" />
+                <input type="radio" th:name="'answer_' + ${stat.index}" th:value="${option}" 
+                       th:checked="${option == quiz.answer}" /> <!-- 정답에 체크 표시 -->
                 <label th:text="${option}"></label>
             </div>
         </div>
     </div>
-    <button type="submit">Submit Quiz</button>
+    <!-- Submit 버튼 삭제 -->
+	<a th:href="@{/result/list}" class="btn btn-info">돌아가기</a>
 </form>
 </body>
 </html>
