--- a/QuizLMS/src/main/resources/templates/my_result.html
+++ b/QuizLMS/src/main/resources/templates/my_result.html
@@ -55,7 +55,7 @@
         </ul>
     </nav>
 
-    <a href="/quiz" class="btn btn-primary">퀴즈 목록으로 돌아가기</a>
+    <a href="/" class="btn btn-primary">메인 화면으로 돌아가기</a>
 </div>
 </body>
 </html>
