--- a/quiz-view/src/Css/Quiz.css
+++ b/quiz-view/src/Css/Quiz.css
@@ -8,7 +8,7 @@
 }
 
 .quiz-container{
-    max-width: 400px;
+    /* max-width: 400px; */
     padding: 20px;
     border-radius: 10px;
     background-color: #f7f7f7;
