--- a/quiz-view/src/Css/Quiz.css
+++ b/quiz-view/src/Css/Quiz.css
@@ -166,3 +166,70 @@ color: black;
 font-size: 24px;
 margin-right: 10px;
 }
+
+
+/* QuizResults.css */
+.result .container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.result h1 {
+    text-align: center;
+    color: #333;
+}
+
+.result h2 {
+    text-align: center;
+    color: #555;
+    margin-bottom: 20px;
+}
+
+.quiz-result {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 15px;
+    margin-bottom: 15px;
+    background-color: #fff;
+}
+
+.result strong {
+    color: #333;
+}
+
+.result input[type="text"] {
+    width: calc(100% - 20px);
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.result button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.result button:hover {
+    background-color: #0056b3;
+}
+
+.nav-link {
+    text-decoration: none;
+    color: #007bff;
+}
+
+.nav-link:hover {
+    text-decoration: underline;
+}
