--- a/quiz-view/src/Css/Footer.css
+++ b/quiz-view/src/Css/Footer.css
@@ -14,47 +14,36 @@
 }
 
 .footer-section {
-    flex: 1;
+    
     margin-right: 30px;
     margin-bottom: 20px;
 }
 
 .footer-logo {
     width: 100px;
-
     margin-bottom: 10px;
-    margin-left: 30px;
-
 }
 
 .about p {
     margin-bottom: 10px;
-    padding-left: 30px;
     line-height: 1.6;
-    
 }
 
 .links h2, .contact h2 {
     margin-bottom: 15px;
-    margin-left: 190px;
-    
     font-size: 18px;
 }
 
 /* .contact h2에 대한 추가 규칙 */
 .contact h2 {
-    margin-left: 190px; /* 170px에서 더 늘린 값 */
+    margin-left: 0; /* 중앙 정렬을 위해 margin-left를 제거 */
 }
 
 .links ul {
     list-style-type: none;
-    margin-left: 190px;
     padding: 0;
 }
 
-.links ul li {
-    margin-bottom: 8px;
-}
 
 .links ul li a {
     color: #333;
@@ -68,12 +57,10 @@
 
 .contact p {
     margin-bottom: 5px;
-    margin-left: 190px;
 }
 
 .socials {
     margin-top: 15px;
-    margin-left: 190px;
 }
 
 .socials a {
@@ -128,4 +115,11 @@
     .footer-bottom-links {
         margin-top: 10px;
     }
+}
+
+/* 추가 스타일: 공통 CSS와의 충돌 방지 */
+footer {
+    font-size: 14px;
+    color: #333;
+    margin-top: 0; /* 공통 CSS의 margin-top을 0으로 설정 */
 }
