--- a/quiz-view/src/Css/Common.css
+++ b/quiz-view/src/Css/Common.css
@@ -62,7 +62,12 @@ header, footer {
     font-size: 16px;
 }
 
-
+footer {
+    
+    font-size: 14px;
+    color: var(--text-light-color);
+    margin-top: 20px;
+}
 
 button {
     padding: 10px 15px;
@@ -93,7 +98,7 @@ li {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px;
+    padding: 1px;
     
 }
 
